--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,20 @@
 .App {
-  padding: 30px;
-  display: flex;
+    padding: 30px;
+    display: flex;
 }
 
 .App > div {
-  margin-right: 50px;
+    margin-right: 50px;
+}
+
+.active-filter {
+    background-color: cadetblue;
+}
+
+.error {
+    border: 2px solid red;
+}
+
+.is-done {
+    opacity: 0.5;
 }
