Add buttom delete task

--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,24 @@
 .App {
-    padding: 30px;
-    display: flex;
+  padding: 30px;
+  display: flex;
 }
 
 .App > div {
-    margin-right: 50px;
-}
-
-.active-filter {
-    background-color: cadetblue;
+  margin-right: 50px;
 }
 
 .error {
-    border: 2px solid red;
+  border: red 1px solid;
+}
+
+.error-message {
+  color: red;
+}
+
+.active-filter {
+  background-color: aquamarine;
 }
 
 .is-done {
-    opacity: 0.5;
+  opacity: 0.5;
 }
